# Fractal

./: .gitignore  CMakeLists.txt  README.md  debug.sh  engine.cpp  engine.hpp  fractal.cpp  fractal.hpp  fractalUtils.cpp  fractalUtils.hpp  helpers.hpp  main.cpp  run.sh
42-Fractol/: Makefile
42-Fractol/includes/: events.h  fractal.h  keys.h  make_engine.h  render.h  utils.h
42-Fractol/libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  (+5 more)
42-Fractol/srcs/: events.c  fractals.c  main.c  make_engine.c  mandelbox.c  render.c  utils.c
include/: cuda_utils.cuh  engine.hpp  fractal.hpp  fractalUtils.hpp  helpers.hpp
src/: cuda_core.cu  cuda_utils.cu  engine.cpp  fractal.cpp  fractalUtils.cpp  fractal_utils.cpp  main.cpp  utils.cpp
